add test html report

--- a/8_Suite_Reports/htmlreports/TestResults_TestCase1_TestCase2_TestCase3_TestCase4.html
+++ b/8_Suite_Reports/htmlreports/TestResults_TestCase1_TestCase2_TestCase3_TestCase4.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="text-capitalize">Unittest Results</h2>
-                <p class='attribute'><strong>Start Time: </strong>2021-06-13 17:13:55</p>
+                <p class='attribute'><strong>Start Time: </strong>2022-04-25 20:28:57</p>
                 <p class='attribute'><strong>Duration: </strong>0 ms</p>
                 <p class='attribute'><strong>Summary: </strong>Total: 16, Pass: 13, Fail: 2, Error: 1</p>
             </div>
@@ -67,7 +67,7 @@
                         <tr style="display:none;">
                             <td class="col-xs-9" colspan="3"><p>TestCase1 test_3
 </p><p style="color:maroon;">AssertionError: 1 != 2</p><p style="color:maroon;">Traceback (most recent call last):
-  File "D:\PycharmProjects\UnittestDemo\8_Suite_Reports\MyTestCase1.py", line 22, in test_3
+  File "/Users/ziqguo/Documents/testdev/testProject/8_Suite_Reports/MyTestCase1.py", line 22, in test_3
     self.assertEqual(a, b)
 AssertionError: 1 != 2
 </p>
@@ -223,7 +223,7 @@ AssertionError: 1 != 2
                         <tr style="display:none;">
                             <td class="col-xs-9" colspan="3"><p>TestCase3 test_3
 </p><p style="color:maroon;">ZeroDivisionError: division by zero</p><p style="color:maroon;">Traceback (most recent call last):
-  File "D:\PycharmProjects\UnittestDemo\8_Suite_Reports\MyTestCaseModule.py", line 22, in test_3
+  File "/Users/ziqguo/Documents/testdev/testProject/8_Suite_Reports/MyTestCaseModule.py", line 22, in test_3
     print(a/b)
 ZeroDivisionError: division by zero
 </p>
@@ -275,7 +275,7 @@ ZeroDivisionError: division by zero
                         <tr style="display:none;">
                             <td class="col-xs-9" colspan="3"><p>TestCase4 test_1
 </p><p style="color:maroon;">AssertionError: 1 != 2</p><p style="color:maroon;">Traceback (most recent call last):
-  File "D:\PycharmProjects\UnittestDemo\8_Suite_Reports\MyTestCaseModule.py", line 34, in test_1
+  File "/Users/ziqguo/Documents/testdev/testProject/8_Suite_Reports/MyTestCaseModule.py", line 34, in test_1
     self.assertEqual(a, b)
 AssertionError: 1 != 2
 </p>
